# oop-battleship

./: CMakeLists.txt  README.md  build-and-run.sh  config_spec.json  run.sh  save.json  save_backup.json  save_spec.json  spec.json  valgrind-test.sh
include/: Ability.hpp  AbilityContainer.hpp  AbilityResult.hpp  Action.hpp  ActionResult.hpp  AttackAction.hpp  AttackOutOfBounds.hpp  BombardAbility.hpp  BotPlayer.hpp  CMakeLists.txt  ConsoleInput.hpp  ConsoleInputHandler.hpp  ConsoleOutput.hpp  ConsoleOutputHandler.hpp  Coordinates.hpp  Deserializer.hpp  DoubleDamageAbility.hpp  Field.hpp  FieldObserver.hpp  FieldProvider.hpp  FileReader.hpp  FileWriter.hpp  GameCommand.hpp  GameInputController.hpp  GameObserver.hpp  GameOutputController.hpp  GameSession.hpp  GameState.hpp  HumanPlayer.hpp  InputHandler.hpp  ManualFieldProvider.hpp  MoveAction.hpp  NoAbilityAvailableException.hpp  Orientation.hpp  OutputHandler.hpp  Player.hpp  PlayerParameters.hpp  RandomFieldProvider.hpp  RandomGenerator.hpp  ScannerAbility.hpp  (+8 more)
reports/: Лабораторная 1.docx  Лабораторная 2.docx  Лабораторная 3.docx  Лабораторная 4.docx
src/: AbilityContainer.cpp  ActionResult.cpp  AttackAction.cpp  BombardAbility.cpp  BotPlayer.cpp  CMakeLists.txt  ConsoleInput.cpp  ConsoleInputHandler.cpp  ConsoleOutput.cpp  ConsoleOutputHandler.cpp  Deserializer.cpp  DoubleDamageAbility.cpp  Field.cpp  FileReader.cpp  FileWriter.cpp  GameInputController.cpp  GameOutputController.cpp  GameSession.cpp  GameState.cpp  HumanPlayer.cpp  MoveAction.cpp  OutputHandler.cpp  Player.cpp  PlayerParameters.cpp  Serializer.cpp  (+7 more)
